force-app/main/default/objects/Payment__c/fields/ACC_Note__c.field-meta.xml
<CustomField>
    <fullName>ACC_Note__c</fullName>
    <label>ACC Note</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>