force-app/main/default/objects/Payment__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account__r.FirstName &amp;&quot; &quot;&amp; Account__r.LastName</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>