force-app/main/default/objects/Payment__c/fields/Account_Name_for__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (for)</label>
    <type>Text</type>
</CustomField>