force-app/main/default/objects/Payment__c/fields/Actual_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payment_Date__c</fullName>
    <label>Actual Payment Date</label>
    <type>DateTime</type>
</CustomField>