force-app/main/default/objects/Payment__c/fields/Actual_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Received_Date__c</fullName>
    <label>Actual Received Date</label>
    <type>DateTime</type>
</CustomField>