force-app/main/default/objects/Payment__c/fields/Auto_Code__c.field-meta.xml
<CustomField>
    <fullName>Auto_Code__c</fullName>
    <displayFormat>P_{0000}</displayFormat>
    <label>Auto Code</label>
    <type>AutoNumber</type>
</CustomField>