force-app/main/default/objects/Payment__c/fields/Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Time__c</fullName>
    <formula>TIMEVALUE( Payment_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Time</label>
    <type>Time</type>
</CustomField>