force-app/main/default/objects/Payment__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <formula>Order__r.DO_DL_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer</label>
    <type>Text</type>
</CustomField>