force-app/main/default/objects/Payment__c/fields/Do_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Do_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Do/Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Do/Dealer)</relationshipLabel>
    <relationshipName>Payments_Dealer</relationshipName>
    <type>Lookup</type>
</CustomField>