force-app/main/default/objects/Payment__c/fields/Payment_Actual_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Actual_Received__c</fullName>
    <label>Payment Actual Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>