force-app/main/default/objects/Payment__c/fields/Payment_Amount_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Request__c</fullName>
    <label>Payment Amount Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>