force-app/main/default/objects/Payment__c/fields/Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Payment Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>