force-app/main/default/objects/Payment__c/fields/Payment_For__c.field-meta.xml
<CustomField>
    <fullName>Payment_For__c</fullName>
    <label>Payment For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xe/Motorcyle</fullName>
            </value>
            <value>
                <fullName>Phụ tùng-phụ kiện-quần áo/PCA</fullName>
            </value>
            <value>
                <fullName>Dịch vụ/Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>