force-app/main/default/objects/Payment__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <label>Payment Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Methods 1</fullName>
            </value>
            <value>
                <fullName>Payment Methods 2</fullName>
            </value>
            <value>
                <fullName>Payment Methods 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>