force-app/main/default/objects/Payment__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Refund Overcharge</fullName>
            </value>
            <value>
                <fullName>MegaPay</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Tiki</fullName>
            </value>
            <value>
                <fullName>Momo</fullName>
            </value>
            <value>
                <fullName>VNPAY</fullName>
            </value>
            <value>
                <fullName>Trả góp</fullName>
            </value>
            <value>
                <fullName>Cash Voucher</fullName>
                <isActive>false</isActive>
                <label>Cash Voucher</label>
            </value>
            <value>
                <fullName>Refund Balance</fullName>
                <isActive>false</isActive>
                <label>Refund Balance</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <isActive>false</isActive>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>mPOS</fullName>
                <isActive>false</isActive>
                <label>mPOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>