force-app/main/default/objects/Payment__c/fields/Payment_Term_MegaPay_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_MegaPay_Detail__c</fullName>
    <label>Payment Term MegaPay Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thanh toán thẻ ATM nội địa</fullName>
            </value>
            <value>
                <fullName>Thanh toán  thẻ quốc tế (VISA/MASTER/JCB)</fullName>
            </value>
            <value>
                <fullName>Ví điện tử (Momo,  ZaloPay, Moca)</fullName>
            </value>
            <value>
                <fullName>Trả góp 0% qua thẻ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>