force-app/main/default/objects/Payment__c/fields/PaymentNo__c.field-meta.xml
<CustomField>
    <fullName>PaymentNo__c</fullName>
    <label>PaymentNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>