force-app/main/default/objects/Payment__c/fields/Refund_Overcharge_Order__c.field-meta.xml
<CustomField>
    <fullName>Refund_Overcharge_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Overcharge Order</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>