force-app/main/default/objects/Payment__c/fields/Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date__c</fullName>
    <label>Transfer Date</label>
    <type>DateTime</type>
</CustomField>