force-app/main/default/objects/Payment__c/fields/Transfer_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Transfer From Account)</relationshipLabel>
    <relationshipName>Payments_Transfer_Form_Account</relationshipName>
    <type>Lookup</type>
</CustomField>