force-app/main/default/objects/Payment__c/fields/Transfer_From_Contract__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer From Contract</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Transfer From Contract)</relationshipLabel>
    <relationshipName>Payment_Transfer_From_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>