force-app/main/default/objects/Payment__c/fields/Transfer_From_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Order_No__c</fullName>
    <label>Transfer From Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>