force-app/main/default/objects/Payment__c/validationRules/Lock_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Text(Stage__c) == &apos;ACC Checking&apos;,Text(Stage__c) == &apos;Completed&apos;, Text(Stage__c) == &apos;Cancelled&apos;)</errorConditionFormula>
    <errorMessage>This payment locked by stage .</errorMessage>
</ValidationRule>