force-app/main/default/objects/Payment__c/listViews/ALL_HN.listView-meta.xml
<ListView>
    <fullName>ALL_HN</fullName>
    <columns>NAME</columns>
    <columns>PaymentNo__c</columns>
    <columns>Payment_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Term__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Payment_For__c</columns>
    <columns>Order__c</columns>
    <columns>Note__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Code__c</field>
        <operation>contains</operation>
        <value>-HN-</value>
    </filters>
    <label>ALL HN</label>
    <sharedTo>
        <group>Group_User_DO_HN</group>
    </sharedTo>
</ListView>